add logic to save and get daily status
