# api/lib/db/schema/dailyStatusSchema.js
@@ -1,0 +1,19 @@
+const mongoose = require('mongoose');
+const Schema = mongoose.Schema;
+
+let dailyStatusSchema = new Schema({
+    engineer: String,
+    workOn: String,
+    workItem: String,
+    nextWorkItem: String,
+    year: String,
+    month: String,
+    day: String
+},
+{
+    timestamps: true
+});
+
+module.exports = {
+    dailyStatusSchema: dailyStatusSchema
+};
